Fixed CSS error on small.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -184,7 +184,7 @@ main {
 }
 
 main div {
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     margin: 1vw;
     border: 1px solid white;
